--- a/src/assets/style/basic-style.scss
+++ b/src/assets/style/basic-style.scss
@@ -1,11 +1,6 @@
-// $background-color1: rgb(247, 220, 220);
-// $background-color2: rgb(238, 236, 104);
-// $background-color3: rgb(183, 248, 250);
-// $background-color4: rgb(187, 178, 231);
-// $background-color5: rgb(250, 174, 250);
-// $background-color6: rgb(143, 118, 118);
+// colors: #0f0c0f #bab1e7
 
-$color1: #0f0c0f;  // background color header+footer
+$color1: #332933;  // background color header+footer
 $color2: #ffffff;  // text color header+footer
 $color3: #e9e9e9;  // border
 
@@ -14,8 +9,23 @@ $color3: #e9e9e9;  // border
     box-sizing: border-box;
 }
 
-h1, p{
-    margin: 0;
-    padding: 0;
+html{
+    font-size: 1px;
 }
 
+body{
+    font-size: 18rem;
+    line-height: 1.6;
+}
+
+// h1{
+//     font-size: 30rem;
+// }
+
+// h2{
+//     font-size: 25rem;
+// }
+
+// p, li, a, i, div, span {
+//     font-size: 20rem;
+// }
